--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: MY site
+title: Yuan's site(MY site)
 email: fbzq125689@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Personal website for sharing my projects and interesting things
+  Personal website for sharing interesting things
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://chongchong721.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  chongchong721
